Fix spacing on nav links

--- a/styles1.css
+++ b/styles1.css
@@ -6,7 +6,6 @@
 
 * {
     margin: auto 0;
-    /*border: 1px solid red;*/
 }
 
 .clearfix: after {
@@ -80,12 +79,8 @@ h2 {
 form {
     margin: auto;
     width: 285px;
+    border: none;
 }
-
-/*.header-content {
-    width: 285px;
-    margin: auto;
-}*/
 
 .header-dog,
 .how-to-dog-img,
@@ -96,10 +91,6 @@ form {
     border: 4px solid #048eaa;
     margin: 20px;
     width: 150px;
-}
-
-form {
-    border: none;
 }
 
 .dog-name-input,
@@ -215,6 +206,7 @@ footer {
         display: block;
         font-size: 14px;
         text-align: right;
+        padding: 0;
     }
 
     .dog-links {
